unpackaged/main/default/objects/ET_Pricing_Service_Request__c/ET_Pricing_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Pricing Service Request</label>
    <nameField>
        <displayFormat>PSR-{0000}</displayFormat>
        <label>Pricing Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>