unpackaged/main/default/objects/ET_Pricing_Service_Request__c/fields/ET_PSR_IsActive__c.field-meta.xml
<CustomField>
    <fullName>ET_PSR_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>