unpackaged/main/default/objects/ET_Pricing_Service_Request__c/fields/ET_Supervisor_Pricing_Choice__c.field-meta.xml
<CustomField>
    <fullName>ET_Supervisor_Pricing_Choice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supervisor Pricing Choice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>