unpackaged/main/default/objects/ET_Pricing_Service_Request__c/fields/isServiceRequestRejected__c.field-meta.xml
<CustomField>
    <fullName>isServiceRequestRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isServiceRequestRejected?</label>
    <type>Checkbox</type>
</CustomField>