unpackaged/main/default/objects/ET_Pricing_Service_Request__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>